--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   /* Control panel to display map layers */
   var controlLayers = L.control.layers( null, null, {
-  position: "topright",
-  collapsed: false
+    position: "topright",
+    collapsed: false
   }).addTo(map);
 
  /* Carto light-gray basemap tiles with labels */
@@ -57,16 +57,15 @@ var terrain = L.tileLayer('https://stamen-tiles.a.ssl.fastly.net/terrain/{z}/{x}
   .bindPopup("Berlin"); // EDIT pop-up text message
 
   /* Upload Latitude/Longitude markers from data.csv file, show Title in pop-up, and override initial center and zoom to fit all in map */
-  // var customLayer = L.geoJson(null, {
-  //  onEachFeature: function(feature, layer) {
-  //    layer.bindPopup(feature.properties.Title);
-  //  }
-  // });
-  // var runLayer = omnivore.csv('data.csv', null, customLayer)
-  // .on('ready', function() {
-  //  map.fitBounds(runLayer.getBounds());
-  // }).addTo(map);
-  // controlLayers.addOverlay(customLayer, 'Markers from data.csv');
+  var customLayer = L.geoJson(null, {
+    onEachFeature: function(feature, layer) {
+      layer.bindPopup(feature.properties.Title);
+    }
+   });
+  var runLayer = omnivore.csv('data.csv', null, customLayer).on('ready', function() {
+    map.fitBounds(runLayer.getBounds());
+   }).addTo(map);
+   controlLayers.addOverlay(customLayer, 'Markers from data.csv');
 
   </script>
 </body>
